Fixed cross building
The project itself shouldn't use or be cross built against sbt 1.0, it
should just provide cross building settings to sbt projects that use
this plugin.

Updated the release process to ensure cross building is used. Also
updated the scripted tests to ensure cross building is done during the
release.